--- a/.github/workflows/main_users-service-calderon-torres.yml
+++ b/.github/workflows/main_users-service-calderon-torres.yml
@@ -38,23 +38,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9F100822BFFD474F9F2FF7F86D2B5753 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A7045A468B02460DB47575992BF28927 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A40064E604F74AA1AA0AC09179317162 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -62,4 +52,4 @@ jobs:
           app-name: 'users-service-calderon-torres'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2F8B001B986A4EFC9613E5D93EDA749E }}
